// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_package = "org.ditto.grpc.gif";



// The gif service definition.
service Gif {

    // A server-to-client streaming RPC.
    //
    // Obtains the Gifs whose status are after the given lastUpdated.  Results are
    // streamed rather than returned at once (e.g. in a response message with a
    // repeated field), as the lastUpdated maybe an very old time and contain a
    // huge number of gifs.
    rpc ListGifs (GifRequest) returns (stream GifResponse) {}
}

message GifRequest{
    int64 afterLastUpdated = 1;
    int32 pageSize = 2;
}

message GifResponse {
    string codepoint = 1;
    string codepointu16 = 2;
    string groupId = 3;
    string subgroupId = 4;
    string name = 5;
    int32 sequence = 6;
    int64 lastUpdated = 7;
    bool active = 8;
}